force-app/main/default/objects/Owner__c/fields/ALN_Direct_Link__c.field-meta.xml
<CustomField>
    <fullName>ALN_Direct_Link__c</fullName>
    <label>ALN Direct Link</label>
    <type>Url</type>
</CustomField>