force-app/main/default/objects/Owner__c/fields/ALN_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>ALN_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>ALN Unique Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>