force-app/main/default/objects/Owner__c/fields/Owner_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Unique_ID__c</fullName>
    <label>Owner Unique ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>